test/spec_vectors/simd_i8x16_cmp/fail/module_13.wat
(module (func $i8x16.eq-arg-empty (result v128) (i8x16.eq)))